<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiScreenFragment"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/patients"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.lzyzsd.circleprogress.DonutProgress
                    custom:donut_inner_drawable="@drawable/man"
                    android:id="@+id/male_progress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    custom:donut_progress="30"
                    custom:donut_finished_stroke_width="10dp"
                    custom:donut_unfinished_stroke_width="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/patients"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/men"/>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.github.lzyzsd.circleprogress.DonutProgress

                    android:id="@+id/female_progress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    custom:donut_progress="30"
                    custom:donut_finished_stroke_width="10dp"
                    custom:donut_unfinished_stroke_width="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/patients"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/women"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/requists"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.github.lzyzsd.circleprogress.DonutProgress
                    custom:donut_inner_drawable="@drawable/man"
                    android:id="@+id/accepted_progress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    custom:donut_progress="30"
                    custom:donut_finished_stroke_width="10dp"
                    custom:donut_unfinished_stroke_width="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/accepted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/patients"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/accepted"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.github.lzyzsd.circleprogress.DonutProgress

                    android:id="@+id/rejected_progress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    custom:donut_progress="30"
                    custom:donut_finished_stroke_width="10dp"
                    custom:donut_unfinished_stroke_width="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/rejected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/patients"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/rejected"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <com.github.lzyzsd.circleprogress.DonutProgress
                android:layout_gravity="center"
                android:id="@+id/unresponded_progress"
                android:layout_width="150dp"
                android:layout_height="150dp"
                custom:donut_progress="30"
                custom:donut_finished_stroke_width="10dp"
                custom:donut_unfinished_stroke_width="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/unresponded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/patients"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/unresponded"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/lastDays"
            android:gravity="center"/>

        <com.alamkanak.weekview.WeekView
            android:id="@+id/weekView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:eventTextColor="@android:color/white"
            app:textSize="12sp"
            app:hourHeight="60dp"
            app:headerColumnPadding="8dp"
            app:headerColumnTextColor="@color/toolbar_text"
            app:headerRowPadding="12dp"
            app:columnGap="8dp"
            app:noOfVisibleDays="3"
            app:headerRowBackgroundColor="@color/toolbar"
            app:dayBackgroundColor="#05000000"
            app:todayBackgroundColor="#1848adff"
            app:headerColumnBackground="#ffffffff"
            app:todayHeaderTextColor="@color/accent" />
    </LinearLayout>
</FrameLayout>
